T-12657 standardtotararesponsive: fixed issue with extra padding in older browsers
Reviewed-on: https://review.totaralms.com/5277
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/theme/standardtotararesponsive/style/pagelayout.css
+++ b/theme/standardtotararesponsive/style/pagelayout.css
@@ -15,10 +15,8 @@ body {
   border-top: 1px solid #d4d4d4;
 }
 
-@media screen and (min-width:980px) {
-  body {
+body {
     padding-top: 0;
-  }
 }
 
 @media screen and (max-width: 767px) {
